--- a/docs/notes/KubeJS/Basic/1.事件列表.md
+++ b/docs/notes/KubeJS/Basic/1.事件列表.md
@@ -47,17 +47,199 @@ permalink: /KubeJS/Basic/event_list/
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
-|modelProperties|-|link|
-|modification|-|link|
-|toolTierRegistry|-|link|
+|rightClicked|-|link|
+|crafted|-|link|
+|dropped|-|link|
+|firstRightClicked|-|link|
+|pickedUp|-|link|
+|destroyed|-|link|
+|entityInteracted|-|link|
+|foodEaten|-|link|
+|firstLeftClicked|-|link|
+|canPickUp|-|link|
+|smelted|-|link|
+|modifyTooltips|-|link|
+
+### **LevelEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|loaded|-|link|
+|unloaded|-|link|
+|beforeExplosion|-|link|
+|saved|-|link|
+|tick|-|link|
+|afterExplosion|-|link|
+
+### **NetworkEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|dataReceived|-|link|
+
+### **RecipeViewerEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|addEntries|-|link|
+|removeEntriesCompletely|-|link|
+|addInformation|-|link|
+|removeRecipes|-|link|
+|removeEntries|-|link|
+|afterExplosion|-|link|
+|removeCategories|-|link|
+|registerSubtypes|-|link|
+|groupEntries|-|link|
+
+### **EntityEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|afterHurt|-|link|
+|spawned|-|link|
+|drops|-|link|
+|saved|-|link|
+|checkSpawn|-|link|
+|death|-|link|
+|beforeHurt|-|link|
+
+### **BlockEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|broken|-|link|
+|placed|-|link|
+|leftClicked|-|link|
+|randomTick|-|link|
+|rightClicked|-|link|
+|startedFalling|-|link|
+|detectorPowered|-|link|
+|farmlandTrampled|-|link|
+|stoppedFalling|-|link|
+|drops|-|link|
+|detectorUnpowered|-|link|
+|detectorChanged|-|link|
+|blockEntityTick|-|link|
+
+### **PlayerEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|chestOpened|-|link|
+|loggedOut|-|link|
+|tick|-|link|
+|stageRemoved|-|link|
+|respawned|-|link|
+|decorateChat|-|link|
+|cloned|-|link|
+|stageAdded|-|link|
+|advancement|-|link|
+|chat|-|link|
+|chestClosed|-|link|
+|loggedInd|-|link|
+|inventoryClosed|-|link|
+|inventoryChanged|-|link|
+|inventoryOpened|-|link|
 
 ----
 
 ## **客户端事件**
 
+### **ItemEvents 事件**
+
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
-|init| - |link|
-|registry| - |link|
-|modifyCreativeTab| - |link|
-|postInit| - |link|
+|rightClicked|-|link|
+|crafted|-|link|
+|dropped|-|link|
+|dynamicTooltips|-|link|
+|firstRightClicked|-|link|
+|pickedUp|-|link|
+|destroyed|-|link|
+|entityInteracted|-|link|
+|foodEaten|-|link|
+|firstLeftClicked|-|link|
+|canPickUp|-|link|
+|smelted|-|link|
+|modifyTooltips|-|link|
+
+### **LevelEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|beforeExplosion|-|link|
+|tick|-|link|
+|afterExplosion|-|link|
+
+### **NetworkEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|dataReceived|-|link|
+
+### **RecipeViewerEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|addEntries|-|link|
+|removeEntriesCompletely|-|link|
+|addInformation|-|link|
+|removeRecipes|-|link|
+|removeEntries|-|link|
+|removeCategories|-|link|
+|registerSubtypes|-|link|
+|groupEntries|-|link|
+
+### **EntityEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|afterHurt|-|link|
+|spawned|-|link|
+|drops|-|link|
+|checkSpawn|-|link|
+|death|-|link|
+|beforeHurt|-|link|
+
+### **ClientEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|rightDebugInfo|-|link|
+|particleProviderRegistry|-|link|
+|leftDebugInfo|-|link|
+|loggedIn|-|link|
+|atlasSpriteRegistry|-|link|
+|loggedOut|-|link|
+|generateAssets|-|link|
+|tick|-|link|
+|lang|-|link|
+
+### **BlockEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|broken|-|link|
+|placed|-|link|
+|leftClicked|-|link|
+|rightClicked|-|link|
+|startedFalling|-|link|
+|detectorPowered|-|link|
+|farmlandTrampled|-|link|
+|stoppedFalling|-|link|
+|detectorUnpowered|-|link|
+|detectorChanged|-|link|
+|blockEntityTick|-|link|
+
+### **PlayerEvents 事件**
+
+|子事件|描述|相关链接|
+|:-:|:-:|:-:|
+|chestOpened|-|link|
+|tick|-|link|
+|stageRemoved|-|link|
+|stageAdded|-|link|
+|chestClosed|-|link|
+|inventoryClosed|-|link|
+|inventoryChanged|-|link|
+|inventoryOpened|-|link|
