去除重复的字

--- a/docs/notes/KubeJS/Basic/2.简单配方.md
+++ b/docs/notes/KubeJS/Basic/2.简单配方.md
@@ -6,10 +6,10 @@ permalink: /KubeJS/Basic/easy_recipe/
 
 ## 工作台配方（`crafting_recipe`）
 
-- 因为配方事件是一个**服务器事件**所以我们需要在 `ServerEnents` 的环境下进行编写 JS 脚本
+- 因为配方事件是一个**服务器事件**所以我们需要在 ==ServerEnents== 的环境下进行编写 JS 脚本。
 
 - 工作台配方总共分为两种:
-  - 一种是有序配配方（`.shaped`）
+  - 一种是有序配方（`.shaped`）
   - 一种是无序配方（`.shapeless`）
 
 ### 有序配方（`shaped`）
