添加新的笔记和其对应的侧边栏

--- a/docs/notes/kubejs/basic/3.简单配方.md
+++ b/docs/notes/kubejs/basic/3.简单配方.md
@@ -20,15 +20,10 @@ permalink: /notes/kubejs/basic/easy_recipe/
 
 ```JS
 ServerEvents.recipes((event) => {
-    event.shaped(result, pattern, key, category?);
-
     event.recipes.kubejs.shaped(result, pattern, key, category?);
 
     event.recipes.minecraft.crafting_shaped(result, pattern, key, category?);
-
 });
 ```
 
-&emsp;&emsp;聪明的你发现了如果想要添加一个简单的有序配方就有三种不同的写法，那么这三种写法有什么不同呢？
-
-&emsp;&emsp;首先我们来看第三种写法，你注意到了 `minecraft` 字段了吧，于是你猜测这个写法是调用的**我的世界原版**的类来实现的添加有序配方的。Bingo！你猜对了。那么同理，第二个是 KubeJS 自己添加的方法来实现添加有序配方的。那么第一个呢？在你使用 `CTRL + 鼠标左键` 该方法的时候你会发现实际上，该方法指向的就是第二种方法使用的类，所以第一、二种写法本质上并没有什么不同，不同的是第一种方法比较简略。
+&emsp;&emsp;聪明的你发现了如果想要添加一个简单的有序配方就有两种不同的写法，那么这两种写法有什么不同呢？
