--- a/docs/notes/kubejs/前言.md
+++ b/docs/notes/kubejs/前言.md
@@ -1,7 +1,7 @@
 ---
 title: 前言
 createTime: 2024/09/26 00:10:10
-permalink: /notes/kubejs/foreword/
+permalink: /notes/kubejs/
 ---
 
 > [!important]
