添加2-6级标题的outline

--- a/docs/notes/kubejs/basic/recipe/原版配方.md
+++ b/docs/notes/kubejs/basic/recipe/原版配方.md
@@ -2,6 +2,7 @@
 title: 原版配方
 createTime: 2024/09/26 00:01:55
 permalink: /notes/kubejs/basic/recipe/vanilla_recipe/
+outline: [2,6]
 ---
 
 - 因为配方事件是一个**服务器事件**所以我们需要在 ==ServerEnents== 的环境下进行编写 JS 脚本。
