--- a/docs/notes/kubejs/misc/item/1.Item.md
+++ b/docs/notes/kubejs/misc/item/1.Item.md
@@ -10,7 +10,7 @@ permalink: /notes/kubejs/misc/item/item/
 
 在我们想要进一步创建一个物品之前，最重要的是需要了解什么是一个物品，以及它与[方块](./3.Block.md)的区别。以下是一个例子：
 
-- 在世界中，你遇到一个泥土并且想要挖掘它。这就是一个方块，因为它被放置于世界之中（实际上，这是[方块状态](./4.BlockState.md)）。
+- 在世界中，你遇到一个泥土并且想要挖掘它。这就是一个方块，因为它被放置于世界之中（实际上，这是[方块状态](../block/2.BlockState.md)）。
 - 一旦你挖掘了方块，它就会被移除（等同于用空气方块替换）并且泥土就会掉落。而这个掉落的泥土就是一个物品实体（Item Entity）。这就意味着掉落的泥土可以像其他实体（猪、僵尸、箭等）一样，可以被水等东西推动，或者被火和熔岩燃烧。
 
 ## ==ItemStack==
