添加自定义配方笔记

--- a/docs/notes/kubejs/basic/recipe/自定义配方.md
+++ b/docs/notes/kubejs/basic/recipe/自定义配方.md
@@ -3,3 +3,29 @@ title: 自定义配方
 createTime: 2024/09/28 22:22:08
 permalink: /notes/kubejs/basic/recipe/custom_recipe/
 ---
+
+## 自定义配方
+
+- KubeJS支持通过直接传入Json来添加（或者是修改）配方。如果一个模组支持数据包配方，那么你就可以在没有任何KubeJS附属模组支持的情况下为其添加配方。
+
+```JS
+ServerEvents.recipes((event) => {
+    // 基本语法：
+    event.custom(arg1 /*: $JsonObject$$Type */ );
+
+    // 以Tinkers' Construct为例子：
+    event.custom({
+        type: 'tconstruct:alloy',
+        inputs: [
+            { tag: 'forge:molten_gold', amount: 90 },
+            { tag: 'forge:molten_silver', amount: 90 }
+        ],
+        result: { fluid: 'tconstruct:molten_electrum', amount: 180 },
+        temperature: 760
+    });
+});
+```
+
+## 参数解释
+
+- `arg1` 一个典型的形式参数名，但是通过翻阅KubeJS模组源代码或者使用ProbeJS模组，你会知道这里应该填入一个 `$JsonObject$$Type` 类型的参数。
