--- a/docs/notes/kubejs/basic/recipe/原版配方.md
+++ b/docs/notes/kubejs/basic/recipe/原版配方.md
@@ -181,7 +181,7 @@ ServerEvents.recipes((event) => {
 - 配方说明：例如使钻石装备升级为下界合金装备。
 
 ::: code-tabs
-@tab Minecraft 1.20.x +
+@tab Minecraft 1.20 +
 
 ```JS
 ServerEvents.recipes((event) => {
