添加一些描述

--- a/docs/notes/kubejs/basic/事件列表.md
+++ b/docs/notes/kubejs/basic/事件列表.md
@@ -4,11 +4,13 @@ createTime: 2024/09/25 21:04:25
 permalink: /notes/kubejs/basic/event_list/
 ---
 
-以下事件基于 ProbeJS 生成的文档
+以下事件基于 ProbeJS 生成的文档。
+
+这里在之后会重写
 
 ## **启动事件**
 
-### **ItemEvents 事件**
+### **ItemEvents 事件**{id:startup_itemevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -16,7 +18,7 @@ permalink: /notes/kubejs/basic/event_list/
 |modification|-|link|
 |toolTierRegistry|-|link|
 
-### **ClientEvents 事件**
+### **ClientEvents 事件**{id:startup_clientevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -24,7 +26,7 @@ permalink: /notes/kubejs/basic/event_list/
 |entityRendererRegistry|-|link|
 |blockEntityRendererRegistry|-|link|
 
-### **StartupEvents 事件**
+### **StartupEvents 事件**{id:startup_startupevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -33,7 +35,7 @@ permalink: /notes/kubejs/basic/event_list/
 |modifyCreativeTab|-|link|
 |postInit|-|link|
 
-### **BlockEvents 事件**
+### **BlockEvents 事件**{id:startup_blockevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -43,7 +45,7 @@ permalink: /notes/kubejs/basic/event_list/
 
 ## **服务器事件**
 
-### **ItemEvents 事件**
+### **ItemEvents 事件**{id:server_itemevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -60,7 +62,7 @@ permalink: /notes/kubejs/basic/event_list/
 |smelted|-|link|
 |modifyTooltips|-|link|
 
-### **LevelEvents 事件**
+### **LevelEvents 事件**{id:server_levelevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -71,13 +73,13 @@ permalink: /notes/kubejs/basic/event_list/
 |tick|-|link|
 |afterExplosion|-|link|
 
-### **NetworkEvents 事件**
+### **NetworkEvents 事件**{id:server_networkevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
 |dataReceived|-|link|
 
-### **RecipeViewerEvents 事件**
+### **RecipeViewerEvents 事件**{id:server_recipeviewevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -91,7 +93,7 @@ permalink: /notes/kubejs/basic/event_list/
 |registerSubtypes|-|link|
 |groupEntries|-|link|
 
-### **EntityEvents 事件**
+### **EntityEvents 事件**{id:server_entityevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -103,7 +105,7 @@ permalink: /notes/kubejs/basic/event_list/
 |death|-|link|
 |beforeHurt|-|link|
 
-### **BlockEvents 事件**
+### **BlockEvents 事件**{id:server_blockevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -121,7 +123,7 @@ permalink: /notes/kubejs/basic/event_list/
 |detectorChanged|-|link|
 |blockEntityTick|-|link|
 
-### **PlayerEvents 事件**
+### **PlayerEvents 事件**{id:server_playerevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -145,7 +147,7 @@ permalink: /notes/kubejs/basic/event_list/
 
 ## **客户端事件**
 
-### **ItemEvents 事件**
+### **ItemEvents 事件**{id:client_itemevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -163,7 +165,7 @@ permalink: /notes/kubejs/basic/event_list/
 |smelted|-|link|
 |modifyTooltips|-|link|
 
-### **LevelEvents 事件**
+### **LevelEvents 事件**{id:client_levelevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -171,13 +173,13 @@ permalink: /notes/kubejs/basic/event_list/
 |tick|-|link|
 |afterExplosion|-|link|
 
-### **NetworkEvents 事件**
+### **NetworkEvents 事件**{id:client_networkevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
 |dataReceived|-|link|
 
-### **RecipeViewerEvents 事件**
+### **RecipeViewerEvents 事件**{id:client_recipeviewevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -190,7 +192,7 @@ permalink: /notes/kubejs/basic/event_list/
 |registerSubtypes|-|link|
 |groupEntries|-|link|
 
-### **EntityEvents 事件**
+### **EntityEvents 事件**{id:client_entityevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -201,7 +203,7 @@ permalink: /notes/kubejs/basic/event_list/
 |death|-|link|
 |beforeHurt|-|link|
 
-### **ClientEvents 事件**
+### **ClientEvents 事件**{id:client_clientevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -215,7 +217,7 @@ permalink: /notes/kubejs/basic/event_list/
 |tick|-|link|
 |lang|-|link|
 
-### **BlockEvents 事件**
+### **BlockEvents 事件**{id:client_blockevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
@@ -231,7 +233,7 @@ permalink: /notes/kubejs/basic/event_list/
 |detectorChanged|-|link|
 |blockEntityTick|-|link|
 
-### **PlayerEvents 事件**
+### **PlayerEvents 事件**{id:client_playerevent}
 
 |子事件|描述|相关链接|
 |:-:|:-:|:-:|
