修改一些描述

--- a/docs/notes/kubejs/前言.md
+++ b/docs/notes/kubejs/前言.md
@@ -57,12 +57,14 @@ permalink: /notes/kubejs/
   - server_scripts
     - xxx.json
   - startup_scripts
-    - xxx,json
+    - xxx.json
 
 :::
 
 >[!note]
 >
-> `/assets/<namespace>/` 路径用于存放各种游戏资源文件，例如纹理、本地化文件、音频、模型等等，其中 `<namespace>` 为命名空间。详细请查看 [我的世界Wiki](https://zh.minecraft.wiki/w/资源包#文件结构)
+> `/assets/<namespace>/` 路径用于存放各种游戏资源文件，例如纹理、本地化文件、音频、模型等等，其中 `<namespace>` 为命名空间。详细请查看 [我的世界Wiki](https://zh.minecraft.wiki/w/资源包#文件结构)。
 >
-> `/data/<namespace>/` 路径用于存放各种游戏数据文件，例如标签、战利品表等等，其中 `<namespace>` 为命名空间。详细请查看 [我的世界Wiki](https://zh.minecraft.wiki/w/数据包#文件夹结构)
+> `/data/<namespace>/` 路径用于存放各种游戏数据文件，例如标签、战利品表等等，其中 `<namespace>` 为命名空间。详细请查看 [我的世界Wiki](https://zh.minecraft.wiki/w/数据包#文件夹结构)。
+>
+> 对于命名空间请看[这里](./misc/basic/namespace.md)。
