修复站内跳转链接

--- a/docs/notes/minecraft/kubejs/basic/recipe/原版配方.md
+++ b/docs/notes/minecraft/kubejs/basic/recipe/原版配方.md
@@ -215,7 +215,7 @@ ServerEvents.recipes(event => {
 
 ## 参数解释{id:parameter}
 
-- `result` 配方结果，需要填写一个 `$ItemStack$$Type` 类型，详细见 [ItemStack](../../misc/item/1.Item.md#itemstack)。
+- `result` 配方结果，需要填写一个 `$ItemStack$$Type` 类型，详细见 [ItemStack](../../../misc/Item.md#itemstack)。
 - `pattern` 配方图案，需要填写一个 `$List$$Type<(string)>` 类型。众所周知，我的世界的工作台的GUI是一个9\*9的格子，因此我们使用数组来表示这个9\*9的格子。所以说图案是一个包含三个字符串的数组，每个字符串有三个字符。
 
 > [!tip]
