--- a/docs/notes/minecraft/kubejs/前言.md
+++ b/docs/notes/minecraft/kubejs/前言.md
@@ -67,4 +67,4 @@ permalink: /notes/minecraft/kubejs/
 >
 > `/data/<namespace>/` 路径用于存放各种游戏数据文件，例如标签、战利品表等等，其中 `<namespace>` 为命名空间。详细请查看 [我的世界Wiki](https://zh.minecraft.wiki/w/数据包#文件夹结构)。
 >
-> 对于命名空间请看[这里](./misc/basic/namespace.md)。
+> 对于命名空间请看[这里](../misc/Namespace.md)。
