1、修改一些描述 2、更正站内跳转链接

--- a/docs/notes/minecraft/kubejs/前言.md
+++ b/docs/notes/minecraft/kubejs/前言.md
@@ -35,7 +35,7 @@ permalink: /notes/minecraft/kubejs/
 
 - kubejs
   - assets
-    - \<namespace>
+    - \<namespace> # \<namespace>及其以下文件夹不会自动生成
       - textures
         - xxx.png
       - lang
@@ -46,18 +46,18 @@ permalink: /notes/minecraft/kubejs/
         - xxx.json
       - ……
   - data
-    - \<namespace>
+    - \<namespace> # \<namespace>及其以下文件夹不会自动生成
       - tags
         - xxx.json
       - ……
   - config
     - xxx.json
   - client_scripts
-    - xxx.json
+    - xxx.js
   - server_scripts
-    - xxx.json
+    - xxx.js
   - startup_scripts
-    - xxx.json
+    - xxx.js
 
 :::
 
@@ -67,4 +67,4 @@ permalink: /notes/minecraft/kubejs/
 >
 > `/data/<namespace>/` 路径用于存放各种游戏数据文件，例如标签、战利品表等等，其中 `<namespace>` 为命名空间。详细请查看 [我的世界Wiki](https://zh.minecraft.wiki/w/数据包#文件夹结构)。
 >
-> 对于命名空间请看[这里](../misc/Namespace.md)。
+> 对于命名空间请看[这里](../misc/Resource_location.md#namespace-命名空间)。
