添加新的链接

--- a/docs/notes/minecraft/misc/前言.md
+++ b/docs/notes/minecraft/misc/前言.md
@@ -6,6 +6,8 @@ permalink: /notes/minecraft/misc/
 
 > [!note]
 >
-> 以下有部分内容来自 [NeoForge 文档](https://docs.neoforged.net/docs/gettingstarted/)
+> 以下有部分内容来自
+> [NeoForge 文档](https://docs.neoforged.net/docs/gettingstarted/)
+> [Minecraft wiki](https://zh.minecraft.wiki/)
 
 在这里我将会放一些小知识。因为比较杂乱无章且比较多，所以统一存放于此。
