更新文档，添加标题锚点以改善导航体验

--- a/docs/notes/minecraft/kubejs/basic/recipe/原版配方.md
+++ b/docs/notes/minecraft/kubejs/basic/recipe/原版配方.md
@@ -7,13 +7,13 @@ outline: [2,6]
 
 - 因为配方事件是一个**服务器事件**所以我们需要在 ==ServerEnents== 的环境下进行编写 JS 脚本。
 
-## 工作台配方{id:crafting_recipe}
+## 工作台配方 {#crafting_recipe}
 
 - 工作台配方总共分为两种:
   - 一种是有序配方（`shaped`）
   - 一种是无序配方（`shapeless`）
 
-### 有序配方（`shaped`）
+### 有序配方（`shaped`） {#shaped_recipe}
 
 - 配方说明：原料在工作台的GUI中以某种确定的摆放方式进行合成的合成。
 
@@ -31,7 +31,7 @@ ServerEvents.recipes((event) => {
 >
 > 其实 `event.recipes.kubejs.shaped()` 还可以简写为 `event.shaped()` ，但我 **不推荐** 使用语句更短的那一种写法。
 
-### 无序配方（`shapeless`）
+### 无序配方（`shapeless`） {#shapeless_recipe}
 
 - 配方说明：原料在工作台的GUI中无需以确定的摆放方式进行的合成。
 
@@ -45,13 +45,13 @@ ServerEvents.recipes((event) => {
 });
 ```
 
-### 配方修饰 {id:crafting_recipe_modification}
+### 配方修饰 {#crafting_recipe_modification}
 
 > [!note]
 >
 > 添加无序/有序合成时建议使用 `event.recipes.kubejs()` 而不是 `event.recipes.minecraft()`，因为后者不支持配方修饰。这也是我之前推荐使用 `event.recipes.kubejs()` 的原因。
 
-#### 替换原料（`replaceIngredient`）
+#### 替换原料（`replaceIngredient`） {#replaceIngredient}
 
 - 配方说明：合成后将原料进行替换。
 - 示例：木剑 + 2x铁锭 => 铁剑，铁锭将变为橡木木板。
@@ -73,7 +73,7 @@ ServerEvents.recipes(event => {
 })
 ```
 
-#### 损伤原料（`damageIngredient`）
+#### 损伤原料（`damageIngredient`） {#damageIngredient}
 
 - 配方说明：合成后将会使原料的耐久度减少。
 - 示例：木剑 + 铁锭 => 10铁粒，扣除木剑1点耐久
@@ -109,7 +109,7 @@ ServerEvents.recipes(event => {
 
 :::
 
-#### 保持原料（`keepIngredient`）
+#### 保持原料（`keepIngredient`） {#keepIngredient}
 
 - 配方说明：合成后将会保持原料不会消失。
 - 示例：铁镐 + 铁矿石 => 2x粗铁，铁镐不会消失。
@@ -126,9 +126,9 @@ ServerEvents.recipes(event => {
 })
 ```
 
-## 熔炉、高炉、烟熏炉配方
+## 熔炉、高炉、烟熏炉配方 {#smelting_blasting_smoking_recipe}
 
-### 烧炼（`smelting`）
+### 烧炼（`smelting`） {#smelting_recipe}
 
 - 配方说明：将原料熔炼（或烧制或烹饪）为产物。
 
@@ -138,7 +138,7 @@ ServerEvents.recipes((event) => {
 });
 ```
 
-### 高温烧炼（`blasting`）
+### 高温烧炼（`blasting`） {#blasting_recipe}
 
 - 配方说明：将原料熔炼（或烧制）为产物。
 
@@ -148,7 +148,7 @@ ServerEvents.recipes((event) => {
 });
 ```
 
-### 烟熏（`smoking`）
+### 烟熏（`smoking`） {#smoking_recipe}
 
 - 配方说明：将原料烹饪为产物。
 
@@ -162,9 +162,9 @@ ServerEvents.recipes((event) => {
 >
 > 熔炉的特殊之处：在熔炉之中可以制作以上三种配方，但是高炉只能制作高温烧炼（`blasting`）配方、烟熏炉只能制作烟熏（`smoking`）配方。
 
-## 营火配方{id:campfire_cooking}
+## 营火配方 {#campfire_cooking}
 
-### 营火烹饪（`campfire_cooking`）
+### 营火烹饪（`campfire_cooking`） {#campfire_cooking_1}
 
 - 配方说明：使用营火进行烹饪。
 
@@ -174,9 +174,9 @@ ServerEvents.recipes((event) => {
 });
 ```
 
-## 锻造台配方{id:smithing}
+## 锻造台配方 {#smithing}
 
-### 升级（`smithing_transform`）
+### 升级（`smithing_transform`） {#smithing_transform}
 
 - 配方说明：例如使钻石装备升级为下界合金装备。
 
@@ -191,7 +191,7 @@ ServerEvents.recipes((event) => {
 
 :::
 
-### 纹饰（`smithing_trim`）
+### 纹饰（`smithing_trim`） {#smithing_trim}
 
 - 配方说明：给盔甲附着纹饰。
 
@@ -201,9 +201,9 @@ ServerEvents.recipes((event) => {
 });
 ```
 
-## 切石机{id:stonecutting}
+## 切石机 {#stonecutting}
 
-### 切石（`stonecutting`）
+### 切石（`stonecutting`） {#stonecutting_1}
 
 - 配方说明：使用切石机合成。
 
@@ -213,7 +213,7 @@ ServerEvents.recipes(event => {
 })
 ```
 
-## 参数解释{id:parameter}
+## 参数解释 {#parameter}
 
 - `result` 配方结果，需要填写一个 `$ItemStack$$Type` 类型，详细见 [ItemStack](../../../misc/Item.md#itemstack)。
 - `pattern` 配方图案，需要填写一个 `$List$$Type<(string)>` 类型。众所周知，我的世界的工作台的GUI是一个9\*9的格子，因此我们使用数组来表示这个9\*9的格子。所以说图案是一个包含三个字符串的数组，每个字符串有三个字符。
