--- a/docs/notes/minecraft/kubejs/basic/recipe/自定义配方.md
+++ b/docs/notes/minecraft/kubejs/basic/recipe/自定义配方.md
@@ -4,7 +4,7 @@ createTime: 2024/09/28 22:22:08
 permalink: /notes/minecraft/kubejs/basic/recipe/custom_recipe/
 ---
 
-## 自定义配方
+## 自定义配方 {#custom_recipe}
 
 - KubeJS支持通过直接传入Json来添加（或者是修改）配方。如果一个模组支持数据包配方，那么你就可以在没有任何KubeJS附属模组支持的情况下为其添加配方。
 
@@ -26,6 +26,6 @@ ServerEvents.recipes((event) => {
 });
 ```
 
-## 参数解释
+## 参数解释 {#parameter}
 
 - `arg1` 一个典型的形式参数名，但是通过翻阅KubeJS模组源代码或者使用ProbeJS模组，你会知道这里应该填入一个 `$JsonObject$$Type` 类型的参数。
