--- a/docs/notes/minecraft/kubejs/前言.md
+++ b/docs/notes/minecraft/kubejs/前言.md
@@ -11,11 +11,11 @@ permalink: /notes/minecraft/kubejs/
 > - KubeJS 2101.7.0
 > - ProbeJS 7.4.0
 
-## 代码编译器
+## 代码编译器 {#ide}
 
 &emsp;&emsp;在进行我的世界的魔改之前我们得需要一个代码编辑器来帮助我们写代码，当然你也可以使用Windows自带的记事本!!(我勒个记事本编程大佬)!!，但是记事本没有代码提示能力，所以我推荐使用 [**Visual Studio Code**](https://code.visualstudio.com/) （简称为 VSC ）这是一个对 **TS/JS** 具有良好支持的代码编辑器。
 
-## ProbeJS
+## ProbeJS {#probejs}
 
 &emsp;&emsp;ProbeJS 对于 KubeJS 是一个重要的附属模组，它通过扫描游戏中加载过的类来生成 TypeScript 文件。这些文件可以帮助我们快速查找方法和字段，并为方法、函数和事件处理程序提供文档。
 
@@ -27,7 +27,7 @@ permalink: /notes/minecraft/kubejs/
 >
 > 如果你发现在 VSC 中 ProbeJS 没有为你提供补全，起尝试按下键盘上的 `F1` 然后选择 `TypeScript:重启 TS 服务器` 选项来重启 TS 服务器。
 
-## 文件结构
+## 文件结构 {#file_structure}
 
 &emsp;&emsp;在首次打开装有 KubeJS 的游戏时，你会发现在游戏目录下会自动生成一个名为 kubejs 的文件夹，在其下有这么几个文件夹：
 
